alphaindexes/3.2.x/modstatistics.md
# Modules Statistics

([0](#0)) ([1](#1)) ([2](#2)) ([3](#3)) ([4](#4)) ([5](#5)) ([6](#6))
([7](#7)) ([8](#8)) ([9](#9)) ([A](#A)) ([B](#B)) ([C](#C)) ([D](#d))
([E](#E)) ([F](#F)) ([G](#G)) ([H](#H)) ([I](#I)) ([J](#J)) ([K](#k))
([L](#L)) ([M](#M)) ([N](#N)) ([O](#O)) ([P](#P)) ([Q](#Q)) ([R](#r))
([S](#S)) ([T](#T)) ([U](#U)) ([V](#V)) ([W](#W)) ([X](#X)) ([Y](#y))
([Z](#z))

## \[0\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[1\]

| Name            | Module Path | Module Name                                                      |
|-----------------|-------------|------------------------------------------------------------------|
| **1xx_replies** | *modules*   | [sl](http://www.kamailio.org/docs/modules/3.2.x/modules/sl.html) |

## \[2\]

| Name                 | Module Path | Module Name                                                          |
|----------------------|-------------|----------------------------------------------------------------------|
| **200_replies**      | *modules*   | [sl](http://www.kamailio.org/docs/modules/3.2.x/modules/sl.html)     |
| **202_replies**      | *modules*   | [sl](http://www.kamailio.org/docs/modules/3.2.x/modules/sl.html)     |
| **2xx_replies**      | *modules*   | [sl](http://www.kamailio.org/docs/modules/3.2.x/modules/sl.html)     |
| **2xx_transactions** | *modules_k* | [tmx](http://www.kamailio.org/docs/modules/3.2.x/modules_k/tmx.html) |

## \[3\]

| Name                 | Module Path | Module Name                                                          |
|----------------------|-------------|----------------------------------------------------------------------|
| **300_replies**      | *modules*   | [sl](http://www.kamailio.org/docs/modules/3.2.x/modules/sl.html)     |
| **301_replies**      | *modules*   | [sl](http://www.kamailio.org/docs/modules/3.2.x/modules/sl.html)     |
| **302_replies**      | *modules*   | [sl](http://www.kamailio.org/docs/modules/3.2.x/modules/sl.html)     |
| **3xx_replies**      | *modules*   | [sl](http://www.kamailio.org/docs/modules/3.2.x/modules/sl.html)     |
| **3xx_transactions** | *modules_k* | [tmx](http://www.kamailio.org/docs/modules/3.2.x/modules_k/tmx.html) |

## \[4\]

| Name                 | Module Path | Module Name                                                          |
|----------------------|-------------|----------------------------------------------------------------------|
| **400_replies**      | *modules*   | [sl](http://www.kamailio.org/docs/modules/3.2.x/modules/sl.html)     |
| **401_replies**      | *modules*   | [sl](http://www.kamailio.org/docs/modules/3.2.x/modules/sl.html)     |
| **403_replies**      | *modules*   | [sl](http://www.kamailio.org/docs/modules/3.2.x/modules/sl.html)     |
| **404_replies**      | *modules*   | [sl](http://www.kamailio.org/docs/modules/3.2.x/modules/sl.html)     |
| **407_replies**      | *modules*   | [sl](http://www.kamailio.org/docs/modules/3.2.x/modules/sl.html)     |
| **408_replies**      | *modules*   | [sl](http://www.kamailio.org/docs/modules/3.2.x/modules/sl.html)     |
| **483_replies**      | *modules*   | [sl](http://www.kamailio.org/docs/modules/3.2.x/modules/sl.html)     |
| **4xx_replies**      | *modules*   | [sl](http://www.kamailio.org/docs/modules/3.2.x/modules/sl.html)     |
| **4xx_transactions** | *modules_k* | [tmx](http://www.kamailio.org/docs/modules/3.2.x/modules_k/tmx.html) |

## \[5\]

| Name                 | Module Path | Module Name                                                          |
|----------------------|-------------|----------------------------------------------------------------------|
| **500_replies**      | *modules*   | [sl](http://www.kamailio.org/docs/modules/3.2.x/modules/sl.html)     |
| **5xx_replies**      | *modules*   | [sl](http://www.kamailio.org/docs/modules/3.2.x/modules/sl.html)     |
| **5xx_transactions** | *modules_k* | [tmx](http://www.kamailio.org/docs/modules/3.2.x/modules_k/tmx.html) |

## \[6\]

| Name                 | Module Path | Module Name                                                          |
|----------------------|-------------|----------------------------------------------------------------------|
| **6xx_replies**      | *modules*   | [sl](http://www.kamailio.org/docs/modules/3.2.x/modules/sl.html)     |
| **6xx_transactions** | *modules_k* | [tmx](http://www.kamailio.org/docs/modules/3.2.x/modules_k/tmx.html) |

## \[7\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[8\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[9\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[A\]

| Name               | Module Path | Module Name                                                                      |
|--------------------|-------------|----------------------------------------------------------------------------------|
| **accepted_regs**  | *modules_k* | [registrar](http://www.kamailio.org/docs/modules/3.2.x/modules_k/registrar.html) |
| **active_dialogs** | *modules_k* | [dialog](http://www.kamailio.org/docs/modules/3.2.x/modules_k/dialog.html)       |
| **active_rooms**   | *modules_k* | [imc](http://www.kamailio.org/docs/modules/3.2.x/modules_k/imc.html)             |

## \[B\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[C\]

| Name         | Module Path | Module Name                                                                |
|--------------|-------------|----------------------------------------------------------------------------|
| **contacts** | *modules_k* | [usrloc](http://www.kamailio.org/docs/modules/3.2.x/modules_k/usrloc.html) |

## \[D\]

| Name                 | Module Path | Module Name                                                                              |
|----------------------|-------------|------------------------------------------------------------------------------------------|
| **defaults_expires** | *modules_k* | [registrar](http://www.kamailio.org/docs/modules/3.2.x/modules_k/registrar.html)         |
| **dialog_endpoints** | *modules_k* | [nat_traversal](http://www.kamailio.org/docs/modules/3.2.x/modules_k/nat_traversal.html) |
| **dumped_messages**  | *modules_k* | [msilo](http://www.kamailio.org/docs/modules/3.2.x/modules_k/msilo.html)                 |
| **dumped_reminders** | *modules_k* | [msilo](http://www.kamailio.org/docs/modules/3.2.x/modules_k/msilo.html)                 |

## \[E\]

| Name                | Module Path | Module Name                                                                |
|---------------------|-------------|----------------------------------------------------------------------------|
| **early_dialogs**   | *modules_k* | [dialog](http://www.kamailio.org/docs/modules/3.2.x/modules_k/dialog.html) |
| **expired_dialogs** | *modules_k* | [dialog](http://www.kamailio.org/docs/modules/3.2.x/modules_k/dialog.html) |
| **expired_sst**     | *modules_k* | [sst](http://www.kamailio.org/docs/modules/3.2.x/modules_k/sst.html)       |
| **expires**         | *modules_k* | [usrloc](http://www.kamailio.org/docs/modules/3.2.x/modules_k/usrloc.html) |

## \[F\]

| Name                 | Module Path | Module Name                                                                |
|----------------------|-------------|----------------------------------------------------------------------------|
| **failed_dialogs**   | *modules_k* | [dialog](http://www.kamailio.org/docs/modules/3.2.x/modules_k/dialog.html) |
| **failed_messages**  | *modules_k* | [msilo](http://www.kamailio.org/docs/modules/3.2.x/modules_k/msilo.html)   |
| **failed_reminders** | *modules_k* | [msilo](http://www.kamailio.org/docs/modules/3.2.x/modules_k/msilo.html)   |
| **failures**         | *modules*   | [sl](http://www.kamailio.org/docs/modules/3.2.x/modules/sl.html)           |

## \[G\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[H\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[I\]

| Name                   | Module Path | Module Name                                                          |
|------------------------|-------------|----------------------------------------------------------------------|
| **inuse_transactions** | *modules_k* | [tmx](http://www.kamailio.org/docs/modules/3.2.x/modules_k/tmx.html) |

## \[J\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[K\]

| Name                    | Module Path | Module Name                                                                              |
|-------------------------|-------------|------------------------------------------------------------------------------------------|
| **keepalive_endpoints** | *modules_k* | [nat_traversal](http://www.kamailio.org/docs/modules/3.2.x/modules_k/nat_traversal.html) |

## \[L\]

| Name              | Module Path | Module Name                                                          |
|-------------------|-------------|----------------------------------------------------------------------|
| **local_replies** | *modules_k* | [tmx](http://www.kamailio.org/docs/modules/3.2.x/modules_k/tmx.html) |

## \[M\]

| Name             | Module Path | Module Name                                                                      |
|------------------|-------------|----------------------------------------------------------------------------------|
| **max_contacts** | *modules_k* | [registrar](http://www.kamailio.org/docs/modules/3.2.x/modules_k/registrar.html) |
| **max_expires**  | *modules_k* | [registrar](http://www.kamailio.org/docs/modules/3.2.x/modules_k/registrar.html) |

## \[N\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[O\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[P\]

| Name                  | Module Path | Module Name                                                                |
|-----------------------|-------------|----------------------------------------------------------------------------|
| **processed_dialogs** | *modules_k* | [dialog](http://www.kamailio.org/docs/modules/3.2.x/modules_k/dialog.html) |

## \[Q\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[R\]

| Name                     | Module Path | Module Name                                                                              |
|--------------------------|-------------|------------------------------------------------------------------------------------------|
| **received_ACKs**        | *modules*   | [sl](http://www.kamailio.org/docs/modules/3.2.x/modules/sl.html)                         |
| **received_replies**     | *modules_k* | [tmx](http://www.kamailio.org/docs/modules/3.2.x/modules_k/tmx.html)                     |
| **registered_endpoints** | *modules_k* | [nat_traversal](http://www.kamailio.org/docs/modules/3.2.x/modules_k/nat_traversal.html) |
| **registered_users**     | *modules_k* | [usrloc](http://www.kamailio.org/docs/modules/3.2.x/modules_k/usrloc.html)               |
| **rejected_regs**        | *modules_k* | [registrar](http://www.kamailio.org/docs/modules/3.2.x/modules_k/registrar.html)         |
| **relayed_replies**      | *modules_k* | [tmx](http://www.kamailio.org/docs/modules/3.2.x/modules_k/tmx.html)                     |

## \[S\]

| Name                     | Module Path | Module Name                                                                              |
|--------------------------|-------------|------------------------------------------------------------------------------------------|
| **sent_err_replies**     | *modules*   | [sl](http://www.kamailio.org/docs/modules/3.2.x/modules/sl.html)                         |
| **sent_replies**         | *modules*   | [sl](http://www.kamailio.org/docs/modules/3.2.x/modules/sl.html)                         |
| **stored_messages**      | *modules_k* | [msilo](http://www.kamailio.org/docs/modules/3.2.x/modules_k/msilo.html)                 |
| **subscribed_endpoints** | *modules_k* | [nat_traversal](http://www.kamailio.org/docs/modules/3.2.x/modules_k/nat_traversal.html) |

## \[T\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[U\]

| Name                 | Module Path | Module Name                                                                |
|----------------------|-------------|----------------------------------------------------------------------------|
| **UAC_transactions** | *modules_k* | [tmx](http://www.kamailio.org/docs/modules/3.2.x/modules_k/tmx.html)       |
| **UAS_transactions** | *modules_k* | [tmx](http://www.kamailio.org/docs/modules/3.2.x/modules_k/tmx.html)       |
| **users**            | *modules_k* | [usrloc](http://www.kamailio.org/docs/modules/3.2.x/modules_k/usrloc.html) |

## \[V\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[W\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[X\]

| Name            | Module Path | Module Name                                                      |
|-----------------|-------------|------------------------------------------------------------------|
| **xxx_replies** | *modules*   | [sl](http://www.kamailio.org/docs/modules/3.2.x/modules/sl.html) |

## \[Y\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[Z\]

| Name | Module Path | Module Name |
|------|-------------|-------------|
